JEDIT VERSION HISTORY

* Version 2.3pre2

+ New Features

- File->Current Directory menu lists all files in current directory, selecting
  a file will open it
- To Upper Case, To Lower Case and Select Word actions from TextTools plugin
  moved into the core (TextTools was written by Mike Dillon)
- New Select Line, Select Paragraph actions (mainly useful in plugins)

+ Enhancements

- Macro updates
- Menu items and tool bar looks better
- Faster literal search, using the Boyer-Moore algorithm (Mike Dillon)
- Menu bar rearranged a little bit
- Improved 'global options' dialog box (Mike Dillon)
- Enhanced help menu
- Files with extension '.php' are now recognized as PHP3 files
- Documentation updates
- .xsd, .xsl, .dtd, .rdf and .rss files are now opened in XML mode

+ Bug Fixes

- Splash screen wasn't displayed (since 2.3pre1)
- The search and replace setting buttons on the tool bar were always off by
  default (since 2.3pre1)
- Blank entries should no longer be printed in the log when printing stack
  traces, etc (since 2.2pre2)
- Files weren't added to the recent file list on exiting (since 2.2pre7)
- Clicking 'Cancel' in the 'goto line' dialog box would beep (since the
  dawn of time)
- If you invoked undo when there were no undos in the queue, a flag would
  be set which prevented undos from working at all (since 2.2pre1)
- If an error occurs while opening a plugin's ZIP file, any subsequent
  plugins don't seem to load (since 1.6pre6)
- Editing with multiple views (or even using the forward delete key) could
  mess up the bracket highlighting (since 1.3pre3)

+ API Changes

- EBPlugin.getName() method deprecated, just use your plugin's name
  directly instead (or store it in a 'static final' constant, etc)

* Version 2.3pre1

+ New Features

- Predefined abbreviation expansion.
  - Expand current word by pressing C+e C+x, or entering a non-alphanumeric
    character
  - Abbreviations can be edited in File->Global Options->Abbreviations